--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
   <title>Hisham Saydawi | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-        integrity="sha512-bM8yc9XnZfN5+ALo7s07L3iRZ7RGeUoQXy7rbOowFYlR2J6g58JrYh4KtkK3wYpi7UfsVRka+ZuqO3H9s2r5Ug=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
+
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      
 </head>
 
 
@@ -44,11 +47,9 @@
 </p>
 
 
-
-    <div class="social-icons">
-  <a href="https://www.linkedin.com/in/hisham-saydawi-610659329/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-  <a href="https://github.com/xAGS1" target="_blank"><i class="fab fa-github"></i></a>
-
+<div class="social-icons">
+  <a href="https://github.com/yourusername"><i class="fab fa-github"></i></a>
+  <a href="https://linkedin.com/in/yourusername"><i class="fab fa-linkedin-in"></i></a>
 </div>
 
 <a href="mailto:hisham.gs@hotmail.com" class="contact-button">Contact me</a>
