--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="social-icons">
   <a href="https://github.com/yourusername"><i class="fab fa-github"></i></a>
-  <a href="https://linkedin.com/in/yourusername"><i class="fab fa-linkedin-in"></i></a>
+  <a href="https://linkedin.com/in/xAGS1"><i class="fab fa-linkedin-in"></i></a>
 </div>
 
 <a href="mailto:hisham.gs@hotmail.com" class="contact-button">Contact me</a>
