--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
 
 <div class="social-icons">
-  <a href="https://github.com/yourusername"><i class="fab fa-github"></i></a>
-  <a href="https://linkedin.com/in/xAGS1"><i class="fab fa-linkedin-in"></i></a>
+  <a href="https://github.com/xAGS1"><i class="fab fa-github"></i></a>
+  <a href="https://www.linkedin.com/in/hisham-saydawi-610659329/"><i class="fab fa-linkedin-in"></i></a>
 </div>
 
 <a href="mailto:hisham.gs@hotmail.com" class="contact-button">Contact me</a>
